src/objects/Publication_Price__c.object
<CustomObject>
    <fields>
        <fullName>Cover_Price__c</fullName>
        <label>Cover Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <label>Day of Week</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publication Prices</relationshipLabel>
        <relationshipName>Publication_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Publication Price</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Publication Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>